@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** March 14, 2011 **
+The NSIS installer script has been largely rewritten.
+
 ** March 09, 2011 **
 The behavior of the current cell when browsing large views has been fixed.
 
